--- a/TARpv21_Mobi/TARpv21_Mobi/Ajatunni.xaml
+++ b/TARpv21_Mobi/TARpv21_Mobi/Ajatunni.xaml
@@ -15,7 +15,7 @@
                                     <Label Text="{Binding Taska}" FontSize="Medium" Margin="0,5,0,0" />
                                     <StackLayout Orientation="Horizontal">
                                         <TimePicker x:Name="myTimePicker" Time="{Binding Time}" Format="hh:mm" Margin="0,5,0,0" />
-                                        <Slider x:Name="mySlider" Minimum="0" Maximum="1" WidthRequest="50" Value="{Binding Completed}" Margin="10,0,0,0" />
+                                        <CheckBox x:Name="Checki"></CheckBox>
                                     </StackLayout>
                                 </StackLayout>
                             </StackLayout>
