--- a/TARpv21_Mobi/TARpv21_Mobi/Ajatunni.xaml
+++ b/TARpv21_Mobi/TARpv21_Mobi/Ajatunni.xaml
@@ -15,7 +15,10 @@
                                     <Label Text="{Binding Taska}" FontSize="Medium" Margin="0,5,0,0" />
                                     <StackLayout Orientation="Horizontal">
                                         <TimePicker x:Name="myTimePicker" Time="{Binding Time}" Format="hh:mm" Margin="0,5,0,0" />
-                                        <CheckBox x:Name="Checki"></CheckBox>
+                                    </StackLayout>
+                                    <StackLayout>
+                                        <CheckBox x:Name="checkbox" HorizontalOptions="CenterAndExpand" />
+                                        <Label x:Name="timeLabel" FontSize="Medium" HorizontalOptions="CenterAndExpand" />
                                     </StackLayout>
                                 </StackLayout>
                             </StackLayout>
