--- a/TARpv21_Mobi/TARpv21_Mobi/Ajatunni.xaml
+++ b/TARpv21_Mobi/TARpv21_Mobi/Ajatunni.xaml
@@ -12,7 +12,7 @@
                             <StackLayout Orientation="Horizontal">
                                 <Image Source="{Binding Image}" WidthRequest="60" HeightRequest="60" Margin="10" />
                                 <StackLayout VerticalOptions="Center">
-                                    <Label Text="{Binding Taska}" FontSize="Medium" Margin="0,5,0,0" />
+                                    <Label Text="{Binding task}" FontSize="Medium" Margin="0,5,0,0" />
                                     <StackLayout Orientation="Horizontal">
                                         <TimePicker x:Name="myTimePicker" Time="{Binding Time}" Format="hh:mm" Margin="0,5,0,0" />
                                     </StackLayout>
